--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "@whiskeysockets/baileys": "^6.7.19",
     "crypto": "^1.0.1",
     "qrcode-terminal": "^0.12.0"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
